added/styled container

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Basic Repo</title>
 </head>
 <body>
-    <h1>Test Repo</h1>
+    <div class="container">
+        <h1>Test Repo</h1>
+    </div>
 </body>
 </html>
