--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Test Repo</h1>
+        <div class="header">
+            <h1>Test Repo</h1>
+        </div>
     </div>
 </body>
 </html>
